Update frontend/scripts, Update Bueyr/Seller Routes/Service, Update openapi.yaml
